@startuml

title __HUMAN's Class Diagram__\n

  package logic {
    package logic.human {
      class Name {
          # firstname : String
          # surname : String
          # middlenames : List<String>
          # suffixes : List<String>
          + Name()
          + setSuffixes()
          + getFullName()
          + toString()
          + getFirstname()
          + getSurname()
          + getMiddlenames()
          + getSuffixes()
      }
    }
  }
  

  package logic {
    package logic.human {
      class NameBuilder {
          {static} - ourInstance : NameBuilder
          # firstname : String
          # surname : String
          # middlenames : List<String>
          # suffixes : List<String>
          {static} + getInstance()
          - NameBuilder()
          + clear()
          + build()
          + buildAndClear()
          + setFirstname()
          + setSurname()
          + setMiddlenames()
          + setSuffixes()
      }
    }
  }
  

  package logic {
    package logic.human {
      class NameValidator {
          + validate()
      }
    }
  }
  

  package logic {
    package logic.human {
      enum Sex {
        Male
        Female
        sex
      }
    }
  }
  

  NameBuilder -up-|> Builder
  NameValidator -up-|> DataValidator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
